# vmgs-utils

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
src/: Gpt.cpp  Gpt.hpp  IBlockDevice.cpp  IBlockDevice.hpp  UnixBlockDevice.cpp  UnixBlockDevice.hpp  VhdDisk.cpp  VhdDisk.hpp  VhdPartitionRef.cpp  VhdPartitionRef.hpp  Vmgs.cpp  Vmgs.hpp  Win32BlockDevice.cpp  Win32BlockDevice.hpp  concepts.hpp  crc32.cpp  crc32.hpp  endian_storage.hpp  init.cpp  init.hpp  interval.hpp
vmgs/: __init__.py  _vmgs.pyi
