[metadata]
name = vmgs-utils
version = 0.1.0
description = "A python package that helps you edit Hyper-V's VMGS file."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hypersine/vmgs-utils

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.7
